--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,4 +2,4 @@ useDynLib(testgp)
 
 export(lasvdgpWorker,gpsepms,predict.gpsepms,
        gpseplmms,predict.gpseplmms,delete.gpsepms,
-       delete.gpseplmms)
+       delete.gpseplmms,lasvdinv)
