tested lasvdgp functions on windows

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,3 @@
 useDynLib(testgp)
 
-export(lasvdgpWorker,gpsepms,predict.gpsepms,
-       gpseplmms,predict.gpseplmms,delete.gpsepms,
-       delete.gpseplmms,lasvdinv)
+export(lasvdGP,knnsvdGP,svdGP,lasvdinv)
