--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,28 @@
 Package: DynamicGP
+Title: Modelling and Analysis of Dynamic Computer Experiments
 Version: 1.1-1
+Description: Emulating and solving inverse problems for dynamic computer experiments.
+	     It contains two major functionalities: (1) localized GP model for large-scale
+	     dynamic computer experiments using the algorithm proposed by
+	     Zhang et al. (2018) <arXiv:1611.09488>; (2) solving inverse problems
+	     in dynamic computer experiments. The current version only supports 64-bit
+	     version of R.
+License: GPL (>= 2)
 Date: 2018-10-12
-Author: Ru Zhang
+Authors@R: c(person(given="Ru", family="Zhang", role = c("aut", "cre"), email="heavenmarshal@gmail.com"),
+	     person(given=c("Chunfang","Devon"), family="Lin", role= "aut"),
+	     person(given="Pritam", family="Ranjan", role= "aut"),
+	     person(given=c("Robert","B"), family="Gramacy", role= "ctb"),
+	     person(given="Nicolas", family="Devillard", role="ctb"),
+	     person(given="Jorge", family="Nocedal", role="ctb"),
+	     person(given=c("Jose","Luis"), family="Morales", role="ctb"),
+	     person(given="Ciyou", family="Zhu", role="ctb"),
+	     person(given="Richard", family="Byrd", role="ctb"),
+	     person(given="Peihuang", family="Lu-Chen", role="ctb"),
+	     person(given="Berend", family="Hasselman", role="ctb"),
+		 person("University of Chicago", role="cph"),
+		 person("University of California", role="cph"))
+Maintainer: Ru Zhang <heavenmarshal@gmail.com>
 Depends: R (>= 2.14)
+Imports: lhs, parallel
 NeedsCompilation: yes
