--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,5 +24,5 @@ Authors@R: c(person(given="Ru", family="Zhang", role = c("aut", "cre"), email="h
 		 person("University of California", role="cph"))
 Maintainer: Ru Zhang <heavenmarshal@gmail.com>
 Depends: R (>= 2.14)
-Imports: lhs, parallel
+Imports: lhs, parallel, stats
 NeedsCompilation: yes
